XapianDB: We only need the headers for malloc_trim

BUG: 333874